@startuml
title scala-man — Domain model

hide empty members
skinparam classAttributeIconSize 0
skinparam linetype ortho

class LevelState {
  + maze: ValidatedMap
  + player: MovingEntity
  + enemies: Vector[Enemy]
  + collectibles: Collectibles
  + effects: ActiveEffects
  + progress: LevelProgress
  + mode: GameMode
  + score: ScoreTracker
  + clock: GameClock
  --
  + status: GameState
  + liveScore: Int
}

class ValidatedMap {
  + raw: RawMap
  + spawn: Position
  + teleports
  + isWalkable(position): Boolean
}

class MovingEntity {
  + currentPos: Position
  + facing: Direction
  + movement: Option[Movement]
}

class Enemy {
  + kind: EnemyKind
  + heading: Option[Position]
}

interface Collectibles
interface ActiveEffects
class LevelProgress {
  + lives: Int
}
class ScoreTracker {
  + currentScore: Int
  + combo: Int
}
class GameClock {
  + elapsed: FiniteDuration
}

interface GameMode
class Normal
class Timed
class Survival

enum GameState {
  Running
  Paused
  Victory
  Defeat
}
enum EnemyKind {
  Hunter
  Anticipator
  Patroller
}
enum BonusEffect {
  Invulnerability
  SlowDown
}
enum Direction {
  Up
  Down
  Left
  Right
}
class Position

LevelState *-- ValidatedMap
LevelState *-- MovingEntity : player
LevelState *-- "0..*" Enemy
LevelState *-- Collectibles
LevelState *-- ActiveEffects
LevelState *-- LevelProgress
LevelState *-- ScoreTracker
LevelState *-- GameClock
LevelState --> GameMode
LevelState --> GameState

ValidatedMap *-- RawMap
Enemy *-- MovingEntity
Enemy --> EnemyKind
MovingEntity --> Position
MovingEntity --> Direction
ActiveEffects --> BonusEffect
GameMode <|.. Normal
GameMode <|.. Timed
GameMode <|.. Survival
@enduml
